--- a/room_select.html
+++ b/room_select.html
@@ -524,7 +524,7 @@
                         fontSize: '0.9em',
                         marginLeft: '8px'
                       }}>
-                        [{inspectionStatus.displayDate}]
+                        [検針日：{inspectionStatus.displayDate}]
                       </span>
                     );
                   } else if (inspectionStatus.status === '未検針') {
