--- a/property_select.html
+++ b/property_select.html
@@ -468,15 +468,17 @@
                       <span className="property-id">
                         ID: {property.id != null ? property.id : 'IDなし'}
                       </span>
-                      <div className="property-name">
-                        {property.name != null ? property.name : '名称なし'}
-                      </div>
-                      {/* 検針完了日の表示 */}
-                      {formatCompletionDate(property.completionDate) && (
-                        <div className="completion-date">
-                          {formatCompletionDate(property.completionDate)}
+                      <div className="property-name-row">
+                        <div className="property-name">
+                          {property.name != null ? property.name : '名称なし'}
                         </div>
-                      )}
+                        {/* 検針完了日を物件名の右側に表示 */}
+                        {formatCompletionDate(property.completionDate) && (
+                          <div className="completion-date">
+                            {formatCompletionDate(property.completionDate)}
+                          </div>
+                        )}
+                      </div>
                     </div>
                     <svg className="property-arrow" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                       <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M9 5l7 7-7 7" />
