--- a/meter_reading_gas.html
+++ b/meter_reading_gas.html
@@ -515,7 +515,17 @@ body {
       meterReadings: window.gasMeterReadings
     });
 
+    // 実行環境を判定
+    const isWebApp = () => {
+      return !window.google?.script?.run;
+    };
+
     const callGasFunction = (functionName, ...args) => {
+      if (isWebApp()) {
+        // Web App環境では制限（今後拡張可能）
+        return Promise.reject(new Error(`Web App環境では ${functionName} 関数は制限されています`));
+      }
+      
       return new Promise((resolve, reject) => {
         google.script.run
           .withSuccessHandler(resolve)
