--- a/meter_reading_gas.html
+++ b/meter_reading_gas.html
@@ -1369,5 +1369,9 @@ body {
     // Initial render
     renderApp();
   </script>
+
+  <!-- PWA関連のスクリプト -->
+  <link rel="stylesheet" href="/pwa-styles.css">
+  <script src="/pwa-utils.js"></script>
 </body>
 </html>
