--- a/room_select_gas.html
+++ b/room_select_gas.html
@@ -819,5 +819,9 @@
       initializeApp();
     }
   </script>
+
+  <!-- PWA関連のスクリプト -->
+  <link rel="stylesheet" href="/pwa-styles.css">
+  <script src="/pwa-utils.js"></script>
 </body>
 </html>
