--- a/room_select.html
+++ b/room_select.html
@@ -191,16 +191,25 @@
             throw new Error(result.error);
           }
 
-          // レスポンス形式の柔軟な処理
+          // 🔥 統一レスポンス形式に対応した処理
           let roomsData;
-          if (Array.isArray(result.result)) {
+          if (result.success === true && Array.isArray(result.data)) {
+            // 新しい統一形式: {success: true, data: [], count: 0}
+            roomsData = result.data;
+            console.log('[room_select] ✅ 統一形式のデータを使用:', roomsData.length, '件');
+          } else if (Array.isArray(result.result)) {
+            // 既存の result 形式
             roomsData = result.result;
+            console.log('[room_select] ⚠️ レガシーresult形式を使用');
           } else if (result.result && Array.isArray(result.result.rooms)) {
             roomsData = result.result.rooms;
+            console.log('[room_select] ⚠️ レガシーresult.rooms形式を使用');
           } else if (Array.isArray(result.rooms)) {
             roomsData = result.rooms;
+            console.log('[room_select] ⚠️ rooms配列形式を使用');
           } else {
-            throw new Error('予期しないレスポンス形式です');
+            console.error('[room_select] 予期しないレスポンス形式:', result);
+            throw new Error('予期しないレスポンス形式です。APIレスポンスを確認してください。');
           }
 
           console.log('[room_select] ✅ 最新データ取得完了:', roomsData.length, '件');
