--- a/room_select.html
+++ b/room_select.html
@@ -191,20 +191,26 @@
             throw new Error(result.error);
           }
 
-          // 🔥 統一レスポンス形式に対応した処理
+          // 🔥 統一レスポンス形式に対応した処理（詳細デバッグ付き）
           let roomsData;
-          if (result.success === true && Array.isArray(result.data)) {
+          console.log('[room_select] レスポンス詳細分析:');
+          console.log('  - typeof result:', typeof result);
+          console.log('  - result.success:', result?.success, 'exact comparison:', result?.success === true);
+          console.log('  - result.data:', result?.data, 'isArray:', Array.isArray(result?.data));
+          console.log('  - result keys:', Object.keys(result || {}));
+          
+          if (result && result.success === true && Array.isArray(result.data)) {
             // 新しい統一形式: {success: true, data: [], count: 0}
             roomsData = result.data;
             console.log('[room_select] ✅ 統一形式のデータを使用:', roomsData.length, '件');
-          } else if (Array.isArray(result.result)) {
+          } else if (result && Array.isArray(result.result)) {
             // 既存の result 形式
             roomsData = result.result;
             console.log('[room_select] ⚠️ レガシーresult形式を使用');
-          } else if (result.result && Array.isArray(result.result.rooms)) {
+          } else if (result && result.result && Array.isArray(result.result.rooms)) {
             roomsData = result.result.rooms;
             console.log('[room_select] ⚠️ レガシーresult.rooms形式を使用');
-          } else if (Array.isArray(result.rooms)) {
+          } else if (result && Array.isArray(result.rooms)) {
             roomsData = result.rooms;
             console.log('[room_select] ⚠️ rooms配列形式を使用');
           } else {
