--- a/property_select.html
+++ b/property_select.html
@@ -230,39 +230,45 @@
           }          const roomData = await roomResponse.json();
           console.log('[ReactApp] Fetched room data:', roomData);
           console.log('[ReactApp] Room data type:', typeof roomData);
-          console.log('[ReactApp] Room data keys:', Object.keys(roomData || {}));
-          console.log('[ReactApp] Room data.success:', roomData?.success, 'type:', typeof roomData?.success);
-          console.log('[ReactApp] Room data.data:', roomData?.data, 'isArray:', Array.isArray(roomData?.data));
-          
-          // 🔥 統一レスポンス形式に対応した処理（詳細デバッグ付き）
+
+          // 🔥 シンプル化された統一レスポンス判定処理
           let rooms;
+          console.log('[ReactApp] 🔍 レスポンス形式判定開始');
+
+          // パターン1: 統一形式 {success: true, data: []}
           if (roomData && roomData.success === true && Array.isArray(roomData.data)) {
-            // 新しい統一形式: {success: true, data: [], count: 0}
             rooms = roomData.data;
-            console.log('[ReactApp] ✅ 統一形式のデータを使用:', rooms.length, '件');
-          } else if (roomData && roomData.result && Array.isArray(roomData.result)) {
-            // 既存の result 形式
-            rooms = roomData.result;
-            console.log('[ReactApp] ⚠️ レガシーresult形式を使用');
-          } else if (Array.isArray(roomData)) {
-            // 直接配列形式
-            rooms = roomData;
-            console.log('[ReactApp] ⚠️ 直接配列形式を使用');
-          } else if (roomData && roomData.rooms && Array.isArray(roomData.rooms)) {
-            // rooms プロパティ形式
-            rooms = roomData.rooms;
-            console.log('[ReactApp] ⚠️ roomsプロパティ形式を使用');
-          } else {
-            console.error('[ReactApp] Unexpected room data format:', roomData);
-            console.error('[ReactApp] Response keys:', Object.keys(roomData || {}));
-            console.error('[ReactApp] Response content:', roomData);
-            console.error('[ReactApp] Detailed analysis:');
-            console.error('  - typeof roomData:', typeof roomData);
-            console.error('  - roomData.success:', roomData?.success, 'exact comparison:', roomData?.success === true);
-            console.error('  - roomData.data:', roomData?.data);
-            console.error('  - Array.isArray(roomData.data):', Array.isArray(roomData?.data));
-            throw new Error('部屋データの形式が予期されたものと異なります。');
+            console.log('[ReactApp] ✅ 統一形式採用 - データ件数:', rooms.length);
           }
+          // パターン2: 直接配列
+          else if (Array.isArray(roomData)) {
+            rooms = roomData;
+            console.log('[ReactApp] ⚠️ 直接配列形式採用');
+          }
+          // パターン3: result プロパティ
+          else if (roomData && Array.isArray(roomData.result)) {
+            rooms = roomData.result;
+            console.log('[ReactApp] ⚠️ result形式採用');
+          }
+          // パターン4: rooms プロパティ
+          else if (roomData && Array.isArray(roomData.rooms)) {
+            rooms = roomData.rooms;
+            console.log('[ReactApp] ⚠️ rooms形式採用');
+          }
+          // エラー処理
+          else {
+            console.error('[ReactApp] ❌ すべてのパターンに該当しない:', {
+              roomData: roomData,
+              hasSuccess: 'success' in (roomData || {}),
+              successValue: roomData?.success,
+              hasData: 'data' in (roomData || {}),
+              dataValue: roomData?.data,
+              isDataArray: Array.isArray(roomData?.data)
+            });
+            throw new Error('部屋データの形式が認識できません');
+          }
+
+          console.log('[ReactApp] 最終採用データ:', rooms.length, '件');
           
           console.log('[ReactApp] Processed rooms:', rooms);
           console.log('[ReactApp] Rooms array check:', Array.isArray(rooms));
