--- a/property_select.html
+++ b/property_select.html
@@ -40,8 +40,9 @@
   <script type="text/babel">
     // 🦁 Brave Browser Cache Busting Version 20250614b
     // WOFF完全削除済み - 一般ブラウザ専用
-    console.log('🚀 Property Select App v20250614b - Brave Cache Fix');
-    console.log('WOFF Status:', typeof woff !== 'undefined' ? '❌ ERROR: WOFF still loaded!' : '✅ WOFF successfully removed');
+  console.log('🚀 Property Select App v20250614c - Debug Mode Enabled');
+  console.log('WOFF Status:', typeof woff !== 'undefined' ? '❌ ERROR: WOFF still loaded!' : '✅ WOFF successfully removed');
+  console.log('🔧 Enhanced Debug Mode Active for data flow tracking');
     
     const App = () => {
       const [properties, setProperties] = React.useState([]);
