--- a/room_select.html
+++ b/room_select.html
@@ -32,7 +32,7 @@
   <script src="/pwa-utils.js"></script>
   
   <!-- 外部CSSファイルの読み込み -->
-  <link rel="stylesheet" href="room_select.css">
+  <link rel="stylesheet" href="css_styles/room_select.css">
 </head>
 <body>
   <div id="root"></div>  
