--- a/meter_reading.html
+++ b/meter_reading.html
@@ -32,7 +32,7 @@
   <script src="/pwa-utils.js"></script>
   
   <!-- 外部CSSファイルの読み込み -->
-  <link rel="stylesheet" href="meter_reading.css">
+  <link rel="stylesheet" href="css_styles/meter_reading.css">
 </head>
 <body>
   <div id="root"></div>
