--- a/property_select.html
+++ b/property_select.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
-<head>
+<html lang="ja  <!-- PWA Utilities -->
+  <script src="/pwa-utils.js"></script>
+  
+  <!-- 外部CSSファイルの読み込み -->
+  <link rel="stylesheet" href="css_styles/property_select.css?v=20250614b">ead>
   <title>物件選択 - 水道メーター読み取りアプリ</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,7 +35,7 @@
   <script src="/pwa-utils.js?v=20250614b"></script>
   
   <!-- 外部CSSファイルの読み込み -->
-  <link rel="stylesheet" href="property_select.css?v=20250614b">
+  <link rel="stylesheet" href="css_styles/property_select.css?v=20250614b">
 </head>
 <body>
   <div id="root"></div>
