--- a/property_select_backup.html
+++ b/property_select_backup.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ja  <!-- PWA Utilities -->
-  <script src="/pwa-utils.js"></script>
-  
-  <!-- 外部CSSファイルの読み込み -->
-  <link rel="stylesheet" href="css_styles/property_select.css?v=20250614b">ead>
+<html lang="ja">
+<head>
   <title>物件選択 - 水道メーター読み取りアプリ</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- 外部CSSファイルの読み込み -->
+  <link rel="stylesheet" href="css_styles/property_select.css?v=20250614b">
   
   <!-- PWA メタタグ -->
   <meta name="description" content="水道メーターの読み取りを管理するアプリケーション">
@@ -33,9 +33,6 @@
   
   <!-- PWA Utilities -->
   <script src="/pwa-utils.js?v=20250614b"></script>
-  
-  <!-- 外部CSSファイルの読み込み -->
-  <link rel="stylesheet" href="css_styles/property_select.css?v=20250614b">
 </head>
 <body>
   <div id="root"></div>
