--- a/room_select.html
+++ b/room_select.html
@@ -33,6 +33,7 @@
   
   <!-- 外部CSSファイルの読み込み -->
   <link rel="stylesheet" href="css_styles/room_select.css">
+  <link rel="stylesheet" href="css_styles/pwa-styles.css">
 </head>
 <body>
   <div id="root"></div>  
