--- a/property_select.html
+++ b/property_select.html
@@ -33,6 +33,7 @@
   
   <!-- 外部CSSファイルの読み込み -->
   <link rel="stylesheet" href="css_styles/property_select.css?v=20250614b">
+  <link rel="stylesheet" href="css_styles/pwa-styles.css?v=20250614b">
 </head>
 <body>
   <div id="root"></div>
