--- a/property_select.html
+++ b/property_select.html
@@ -22,102 +22,6 @@
   
   <!-- WOFF SDK removed for general browser compatibility -->
   
-  <!-- クリティカルCSS (インライン) - 初回表示の改善 -->
-  <style>
-    /* Critical CSS for immediate styling */
-    * { box-sizing: border-box; }
-    body { 
-      margin: 0; padding: 0; 
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-      line-height: 1.6; background-color: #f5f5f5;
-    }
-    #root {
-      min-height: 100vh;
-      background-color: #f5f5f5;
-    }
-    .loading-container { 
-      display: flex; align-items: center; justify-content: center; 
-      min-height: 100vh; background-color: #f5f5f5; 
-    }
-    .loading-spinner { 
-      width: 40px; height: 40px; border: 4px solid #e1e1e1; 
-      border-top: 4px solid #007bff; border-radius: 50%; 
-      animation: spin 1s linear infinite; 
-    }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-    .mantine-container { 
-      width: 100%; max-width: 1200px; margin: 0 auto; padding: 16px; 
-    }
-    .mantine-stack {
-      display: flex; flex-direction: column; gap: 16px;
-    }
-    .mantine-button { 
-      display: inline-flex; align-items: center; justify-content: center; 
-      padding: 8px 16px; border: 1px solid #007bff; border-radius: 4px; 
-      background-color: #007bff; color: white; text-decoration: none; 
-      cursor: pointer; transition: background-color 0.2s;
-      font-size: 16px; font-weight: 500;
-    }
-    .mantine-button:hover { background-color: #0056b3; }
-    .mantine-card { 
-      background: white; border-radius: 8px; padding: 16px; 
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin-bottom: 16px; 
-    }
-    .mantine-title { 
-      margin: 0 0 16px 0; font-size: 24px; font-weight: 600; color: #333; 
-    }
-    .mantine-text-input { 
-      margin-bottom: 16px; 
-    }
-    .mantine-text-input input { 
-      width: 100%; padding: 8px 12px; border: 1px solid #ddd; 
-      border-radius: 4px; font-size: 16px; 
-    }
-    .mantine-simple-grid {
-      display: grid; gap: 16px;
-      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    }
-    .property-card {
-      background: white; border-radius: 8px; padding: 20px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-      cursor: pointer;
-    }
-    .property-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-    }
-    .property-name {
-      font-size: 18px; font-weight: 600; color: #333;
-      margin-bottom: 8px;
-    }
-    .property-id {
-      font-size: 14px; color: #666;
-      margin-bottom: 8px;
-    }
-    .completion-date {
-      font-size: 14px; padding: 4px 8px;
-      border-radius: 4px; background-color: #e7f5ff;
-      color: #1971c2; display: inline-block;
-    }
-    /* スタイル読み込み状態の管理 */
-    .styles-loading { 
-      opacity: 0.3; 
-      transition: opacity 0.3s ease-in-out; 
-    }
-    .styles-loaded { 
-      opacity: 1; 
-    }
-  </style>
-  
-  <!-- 重要: CSS ファイルを最初に読み込む (レンダリングブロッキング) -->
-  <link rel="stylesheet" href="css_styles/property_select.css?v=20250614c">
-  <link rel="stylesheet" href="css_styles/pwa-styles.css?v=20250614c">
-  
-  <!-- CSS プリロード (パフォーマンス向上) -->
-  <link rel="preload" href="css_styles/property_select.css?v=20250614c" as="style">
-  <link rel="preload" href="css_styles/pwa-styles.css?v=20250614c" as="style">
-  
   <!-- ReactとReactDOMのCDN (Cache Busting Version) -->
   <script src="https://unpkg.com/react@18/umd/react.development.js?v=20250614c" crossorigin></script>
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js?v=20250614c" crossorigin></script>
@@ -128,7 +32,7 @@
   <script src="/pwa-utils.js?v=20250614c"></script>
 </head>
 <body>
-  <div id="root" class="styles-loading"></div>
+  <div id="root"></div>
 
   <script type="text/babel">
     // 🦁 Brave Browser Cache Busting Version 20250614c
@@ -136,56 +40,7 @@
     // CSS読み込み完了待機機能追加
   console.log('🚀 Property Select App v20250614c - Debug Mode Enabled');
   console.log('WOFF Status:', typeof woff !== 'undefined' ? '❌ ERROR: WOFF still loaded!' : '✅ WOFF successfully removed');
-  console.log('🔧 Enhanced Debug Mode Active for data flow tracking');    // CSS読み込み完了を待機する関数（改良版）
-  function waitForStylesLoaded() {
-    return new Promise((resolve) => {
-      let attempts = 0;
-      const maxAttempts = 300; // 3秒まで待つ
-
-      const checkStyles = () => {
-        attempts++;
-        const propertyStyles = document.querySelector('link[href*="property_select.css"]');
-        const pwaStyles = document.querySelector('link[href*="pwa-styles.css"]');
-        let cssLoaded = true;
-        try {
-          // sheetとcssRules両方を確認
-          cssLoaded = propertyStyles && pwaStyles &&
-            propertyStyles.sheet && pwaStyles.sheet &&
-            propertyStyles.sheet.cssRules.length > 0 && pwaStyles.sheet.cssRules.length > 0;
-        } catch (e) {
-          cssLoaded = false;
-        }
-
-        if (!cssLoaded && attempts < maxAttempts) {
-          setTimeout(checkStyles, 10);
-          return;
-        }
-
-        // スタイル適用テスト
-        const testElement = document.createElement('div');
-        testElement.className = 'mantine-container';
-        testElement.style.position = 'absolute';
-        testElement.style.visibility = 'hidden';
-        document.body.appendChild(testElement);
-
-        const styles = window.getComputedStyle(testElement);
-        const hasContainerStyles = (
-          styles.maxWidth !== 'none' ||
-          styles.padding !== '0px'
-        );
-        document.body.removeChild(testElement);
-
-        if (hasContainerStyles || attempts >= maxAttempts) {
-          const rootElement = document.getElementById('root');
-          if (rootElement) rootElement.className = 'styles-loaded';
-          resolve();
-        } else {
-          setTimeout(checkStyles, 10);
-        }
-      };
-      checkStyles();
-    });
-  }
+  console.log('🔧 Enhanced Debug Mode Active for data flow tracking');
     
     const App = () => {
       const [properties, setProperties] = React.useState([]);
@@ -702,12 +557,9 @@
     };
 
     // Use React 18 createRoot API instead of ReactDOM.render
-    // CSS読み込み完了後にアプリを起動
-    waitForStylesLoaded().then(() => {
-      const root = ReactDOM.createRoot(document.getElementById('root'));
-      root.render(<App />);
-      console.log('🎨 アプリ起動: CSS読み込み完了後に実行');
-    });
+    const root = ReactDOM.createRoot(document.getElementById('root'));
+    root.render(<App />);
+    console.log('🎨 アプリ起動');
   </script>
   
   <!-- PWA初期化スクリプト -->
