--- a/meter_reading.html
+++ b/meter_reading.html
@@ -457,7 +457,7 @@
               // inspection_dataシートの列名を想定したマッピング
               const mapped = {
                 // 基本情報
-                date: rawReading['検針日'] || rawReading['date'] || rawReading['記録日'] || '',
+                date: rawReading['検針日時'] || rawReading['date'] || rawReading['記録日'] || '',
                 currentReading: rawReading['今回指示数'] || rawReading['currentReading'] || rawReading['指示数'] || '',
                 previousReading: rawReading['前回指示数'] || rawReading['previousReading'] || rawReading['前回'] || '',
                 previousPreviousReading: rawReading['前々回指示数'] || rawReading['previousPreviousReading'] || rawReading['前々回'] || '',
